Fixed a bug where hero image was overlapping with the header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,3 +59,9 @@ h2 {
     background-position: center center;
     background-size: cover;
 }
+
+#hero-outer {
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+}
